--- a/collections/_pages/about.html
+++ b/collections/_pages/about.html
@@ -3,6 +3,7 @@ layout: default
 title: About
 image: /images/page-1.jpg
 image_alt: My best photo
+permalink: /about/
 ---
 
 {% include page-heading.html title=page.title %}
