--- a/collections/_pages/blog.html
+++ b/collections/_pages/blog.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Blog
+permalink: /blog/
 description: Vonge blog features productivity, tips, inspiration and strategies for massive profits. Find out how to set up a successful blog or how to make yours even better!
 ---
 
