--- a/collections/_pages/elements.html
+++ b/collections/_pages/elements.html
@@ -3,6 +3,7 @@ layout: default
 title: Elements
 image: /images/page-2.jpg
 image_alt:
+permalink: /elements/
 ---
 
 {% include page-heading.html title=page.title %}
