--- a/collections/_pages/projects.html
+++ b/collections/_pages/projects.html
@@ -2,6 +2,7 @@
 layout: default
 title: Projects
 description: I show only my best works built completely with passion, simplicity, and creativity!
+permalink: /projects/
 ---
 
 {% include page-heading.html title="My works" description=page.description %}
