--- a/collections/_pages/index.html
+++ b/collections/_pages/index.html
@@ -4,45 +4,45 @@ title: Home
 ---
 
 {% include hero.html
-  title="Hi there, I am Vanessa Marley"
-  description_html="<p><strong>Photographer</strong> and <strong>Visual Content Strategist</strong> from Albany. I work as a lifestyle, product, and landscape photographer, creating images for a diverse range of requests, from online media to printed artwork.</p>"
-  image="/images/01.jpg"
-  hero_image_alt="Vanessa Marley's picture"
-  cta_button="Get in touch"
+  title="Hej! Jag är Niklas Fännick."
+  description_html="<p><strong>Mästersmed</strong> och <strong>konstnär</strong> från Göteborg. Jag och min fru håller smideskurser lite utanför Helsingborg. Kom och hälsa på vettja!</p>"
+  image="/images/avatar.jpg"
+  hero_image_alt="Niklas porträtt"
+  cta_button="Kontakta mig"
   cta_button_link="#contact"
-  works_button="See my works"
+  works_button="Se vilka kurser vi erbjuder"
   works_button_link="#projects"
 %}
 
 {% include projects-section.html
-  title="Latest Works"
-  description_html="<p>I show only my best works built completely with passion, simplicity, and creativity!</p>"
+  title="Kurserna"
+  description_html="<p>Dessa är några av kurserna vi erbjuder.</p>"
   link_url="/projects"
   show_projects=true
 %}
 
 {% include testimonials-section.html
-  title="Happy Clients"
+  title="Vad folk säger"
   show_testimonials=true
 %}
 
 {% include blog-section.html
-  title="Recent Posts"
-  description_html="<p>Vonge blog features productivity, tips, inspiration and strategies for massive profits. Find out how to set up a successful blog or how to make yours even better!</p>"
+  title="Blågg"
+  description_html="<p>Läs vår blågg och få reda på vad som händer! Jag postar även projekt, tips, och små lektioner där du kan lära dig smidets ädla konst.</p>"
   link_url="/blog"
   show_posts=true
 %}
 
 {% include newsletter.html
-  newsletter_title="Join my mailing list"
-  newsletter_description="Get inspiration, updates and, cool stuff!"
+  newsletter_title="Gå med i vår mejlinglista"
+  newsletter_description="Få inspiration, updateringar och annat kul!"
   newsletter_identifier="frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&id=3038727cc3"
   newsletter_button="Subscribe"
 %}
 
 {% include contact-form.html
-  form_title="Get in touch"
-  form_description="Vonge comes with a built-in contact form."
-  form_submission_email="site@example.com"
-  form_button_text="Send now"
+  form_title="Kontakta mig"
+  form_description="Har du frågor? Jag har svar."
+  form_submission_email="niklasfannick@gmail.com"
+  form_button_text="Skicka"
 %}
