Modified by www.SourceFiles.app

--- a/collections/_pages/index.html
+++ b/collections/_pages/index.html
@@ -4,8 +4,8 @@ title: Home
 ---
 
 {% include hero.html
-  title="Hej! Jag är Niklas Fännick."
-  description_html="<p><strong>Mästersmed</strong> och <strong>konstnär</strong> från Göteborg. Jag och min fru håller smideskurser lite utanför Helsingborg. Kom och hälsa på vettja!</p>"
+  title="Hej!"
+  description_html="<p> Jag heter Niklas Fännick, och är <b>smed</b>, <strong>konstsmidesmästare</strong> och <strong>konstnär</strong> sedan 20 år. Jag och min fru är verksamma på Kullahalvön, där vi bland annat leder kurser i metallhantverk. <a href="#contact">Hör av dig!</a></p>"
   image="/images/avatar.jpg"
   hero_image_alt="Niklas porträtt"
   cta_button="Kontakta mig"
@@ -17,7 +17,7 @@ title: Home
 {% include projects-section.html
   title="Kurserna"
   description_html="<p>Dessa är några av kurserna vi erbjuder.</p>"
-  link_url="/projects"
+  link_url="/kurser/"
   show_projects=true
 %}
 
