Modified by www.SourceFiles.app

--- a/collections/_pages/index.html
+++ b/collections/_pages/index.html
@@ -5,7 +5,7 @@ title: Home
 
 {% include hero.html
   title="Hej!"
-  description_html="<p> Jag heter Niklas Fännick, och är <b>smed</b>, <strong>konstsmidesmästare</strong> och <strong>konstnär</strong> sedan 20 år. Jag och min fru är verksamma på Kullahalvön, där vi bland annat leder kurser i metallhantverk. <a href="#contact">Hör av dig!</a></p>"
+  description_html="<p> Jag heter Niklas Fännick, och är <b>smed</b>, <strong>konstsmidesmästare</strong> och <strong>konstnär</strong> sedan 20 år. Jag och min fru är verksamma på Kullahalvön, där vi bland annat leder kurser i metallhantverk. <a href=\"#contact\">Hör av dig!</a></p>"
   image="/images/avatar.jpg"
   hero_image_alt="Niklas porträtt"
   cta_button="Kontakta mig"
