--- a/collections/_pages/kurser.html
+++ b/collections/_pages/kurser.html
@@ -1,11 +1,11 @@
 ---
 layout: default
-title: Projects
-description: I show only my best works built completely with passion, simplicity, and creativity!
-permalink: /projects/
+title: Kurser
+description: Kom och lär dig metallurgins ädla konst!
+permalink: /kurser/
 ---
 
-{% include page-heading.html title="My works" description=page.description %}
+{% include page-heading.html title="Våra kurser" description=page.description %}
 
 <section class="section projects">
   <div class="container">
@@ -16,10 +16,3 @@ permalink: /projects/
     </div>
   </div>
 </section>
-
-{% include newsletter.html
-  newsletter_title="Join my mailing list"
-  newsletter_description="Get inspiration, updates and, cool stuff!"
-  newsletter_identifier="frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&id=3038727cc3"
-  newsletter_button="Subscribe"
-%}
