Modified by www.SourceFiles.app

--- a/collections/_pages/about.html
+++ b/collections/_pages/about.html
@@ -1,27 +1,21 @@
 ---
 layout: default
-title: About
+title: Om oss
 image: /images/page-1.jpg
 image_alt: My best photo
-permalink: /about/
+permalink: /om/
 ---
 
 {% include page-heading.html title=page.title %}
 {% include page-image.html image=page.image image_alt=page.image_alt %}
 
 <div class="page animate">
-  <p>In omni enim arte vel studio vel quavis scientia velas in ipsa virtute
-  optimum quidque est...</p>
-
-  <blockquote><p>The longer I live, the more I realize that I am
-  never wrong about anything...</p></blockquote>
-
-  <p>Ego quoque, inquit...</p>
+ <p>Vi är en konstnärsduo bestående av Niklas Fännick och Jessica van Doorn Fännick. Niklas har även mästarbrev i konstsmidesyrket/varmsmidesyrket och började med smide 2007. Sedan 2012 har vi jobbat nästan uteslutande med konst i offentlig miljö, och då förstås mest i metall. Förutom konstuppdrag har vi även gjort historiska smidesrestaureringar och kompletteringar i metall för både offentliga och privata uppdragsgivare. (SFV, Tjolöholms slott m.fl.) Det har mestadels rört sig om grindar, gångjärn och räcken.
+           </p>
+<p>Förutom kurser kan vi bistå med det mesta inom metall, det behöver inte vara av konstnärlig art. Vi har även erfarenhet av stålbygge/byggnadssmide, reparation, svets, målning med linoljefärg (och mer konventionell ytbehandling) och konsultation. Vi har väldigt bred erfarenhet av smidesyrket. Oavsett vad det gäller är noggrannhet viktigt för oss.</p>
+        <p>Kontakta oss nedan för frågor, eller om du är intresserad av nån av våra kurser.</p>
+    <a href="https://fannick.se" class="btn btn-lg btn-outline">
+          <i class="fa fa-external-link-alt"></i> Se vår webbsida - Fännick.se
+        </a>
+        <img class="img-responsive" src="image/profile_header.jpg" width="539" height="213" alt="profile-pic">
 </div>
-
-{% include newsletter.html
-  newsletter_title="Join my mailing list"
-  newsletter_description="Get inspiration, updates and, cool stuff!"
-  newsletter_identifier="frnla.us6.list-manage.com/subscribe/post?u=6314d69a3f315af7ce3fb00a0&id=3038727cc3"
-  newsletter_button="Subscribe"
-%}
