--- a/collections/_pages/about.html
+++ b/collections/_pages/about.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Om oss
-image: /images/page-1.jpg
+image: /images/avatar.jpg
 image_alt: My best photo
 permalink: /om/
 ---
