Modified by www.SourceFiles.app

--- a/collections/_pages/about.html
+++ b/collections/_pages/about.html
@@ -2,7 +2,7 @@
 layout: default
 title: Om oss
 image: /images/avatar.jpg
-image_alt: My best photo
+image_alt: "Niklas Fännick"
 permalink: /om/
 ---
 
