Modified by www.SourceFiles.app

--- a/collections/_pages/about.html
+++ b/collections/_pages/about.html
@@ -17,5 +17,5 @@ permalink: /om/
     <a href="https://fannick.se" class="btn btn-lg btn-outline">
           <i class="fa fa-external-link-alt"></i> Se vår webbsida - Fännick.se
         </a>
-        <img class="img-responsive" src="image/profile_header.jpg" width="539" height="213" alt="profile-pic">
+        <img class="img-responsive" src="/image/profile_header.jpg" width="539" height="213" alt="profile-pic">
 </div>
